Add hover color to glossary style

--- a/src/scss/_singular.scss
+++ b/src/scss/_singular.scss
@@ -57,6 +57,12 @@
     &-description {
       color: var(--fg-700);
     }
+
+    a {
+      &:hover {
+        color: var(--primary-500);
+      }
+    }
   }
 }
 
