--- a/src/scss/comments.scss
+++ b/src/scss/comments.scss
@@ -262,6 +262,7 @@
     line-height: 1;
     text-transform: uppercase;
     padding-bottom: .75rem;
+    margin-bottom: 0;
     border-bottom: var(--layout-hr-border-dashed);
   }
 
@@ -285,18 +286,13 @@
   }
 
   .load-more-list-item {
-    &:not(:first-child) {
-      margin-top: 16px;
-    }
+    margin-top: 16px;
   }
 
   .comments-loading-placeholder {
     text-align: center;
+    margin-top: 16px;
     height: get_clamp(34, 39, 320, 1024);
-
-    &:not(:first-child) {
-      margin-top: 16px;
-    }
   }
 }
 
