Update story comments header spacing

--- a/src/scss/comments.scss
+++ b/src/scss/comments.scss
@@ -262,7 +262,7 @@
     line-height: 1;
     text-transform: uppercase;
     padding-bottom: .75rem;
-    margin-bottom: 0;
+    margin-bottom: 24px;
     border-bottom: var(--layout-hr-border-dashed);
   }
 
