Fix icon menu item hover border-radius

--- a/src/scss/_icon-menu.scss
+++ b/src/scss/_icon-menu.scss
@@ -70,7 +70,7 @@
 
 .main-navigation {
   &.is-sticky {
-    :is(.icon-menu__item, .icon-menu__item.follow-menu-item) {
+    .menu-item {
       border-radius: 0;
     }
   }
