Add amount cents to bulk edit

--- a/src/scss/admin/admin.scss
+++ b/src/scss/admin/admin.scss
@@ -1104,7 +1104,7 @@ td.fictioneer_patreon_lock_amount {
   margin: .2em 0;
 }
 
-.bulk-edit-wrapper {
+.bulk-edit-box {
   padding: 4px 8px;
   margin-bottom: .8em;
   border: 1px solid #ddd;
